# chahua

./: .gitignore  Jenkinsfile  README.md  docker-compose.yml  progress.md  review-advanced-settings.md  review-backend.md  review-chat-components.md  review-store-tests.md
.woodpecker/: backend-check.yaml  backend-image.yaml  check.yaml  frontend-check.yaml  test.yaml
backend/: .env.example  Cargo.toml
backend/migrations/2026-05-09-071218-0000_add_targeted_invite_lookup_index/: down.sql  up.sql
backend/migrations/2026-05-20-020903-0000_add_push_delivery_failure_tracking/: down.sql  up.sql
backend/migrations/2026-06-02-084110-0000_add_message_forwarding/: down.sql  up.sql
backend/migrations/2026-06-17-025442-0000_add_message_forwarding/: down.sql  up.sql
backend/migrations/2026-06-26-120000-0000_add_thread_user_states_read_pointer_index/: down.sql  up.sql
backend/migrations/2026-06-28-065558-0000_seed_usergroup_colors/: down.sql  up.sql
backend/src/: errors.rs  main.rs  metrics.rs  models.rs  openapi.rs  serde_i64_string.rs
backend/src/dto/: messages.rs  mod.rs
ci/: Jenkinsfile.backend-base-images  Jenkinsfile.pwa-build
simulate/: chat_load.py  pyproject.toml
simulate/tests/: test_chat_load.py
wetty-chat-flutter/: AGENTS.md  pubspec.yaml
wetty-chat-flutter/lib/: main.dart
wetty-chat-flutter/test/: dev_session_store_test.dart  widget_test.dart
wetty-chat-mobile/: .gitignore  package-lock.json  package.json  vite.config.dev.ts  vitest.config.ts
wetty-chat-mobile/src/: features.test.ts  features.ts  main.tsx  serviceWorker.ts
(+241 files in other folders)
