[project]
name = "wetty-simulate"
version = "0.1.0"
description = "Simulation helpers for wetty chat backend testing"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["chat_load.py"]

[tool.hatch.build.targets.sdist]
include = ["chat_load.py", "tests"]
